<resources>
    <string name="app_name">Oasis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_addd">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_list">List of RM</string>
    <string name="menu_services">Services</string>
    <string name="menu_logout">Logout</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
